fixed delete button for list, added edit button with dialog pop up. update to DB bug left to squash

--- a/salary-management-UI/src/app/component/navbar/navbar.component.css
+++ b/salary-management-UI/src/app/component/navbar/navbar.component.css
@@ -14,7 +14,7 @@
 }
 
 .nav-logo {
-  margin-top: 45vh;
+  margin-top: 40vh;
   width: 100%;
   max-width: 200px;
   height: auto;
